@@ -5,6 +5,8 @@ Phoronix Test Suite (Git)
 - pts-core: Introduce basic system logging capabilities for services
 - pts-core: Try downloading files from remote download caches up to two times in event of failure / checksum issues
 - phoromatic: Start a basic logger of Phoromatic Server events
+- phoromatic: Add new create schedule interface
+- phoromatic: Properly hook in system ID / group validation for test schedules
 
 Phoronix Test Suite 5.4 Milestone 2
 5 October 2014
